- Fixed extraneous messages about leaving a group when updating character properties if the character is a member of an initiation group.
- Fixed a regression in the behaviour of the spellcategory improvement type that caused all improvements of that type to apply to all spells.

Data Changes:
- Removed extraneous Magic Sense quality. Closes #4021
- Added support to the SR Missions 1.4 Rules customdata file for the ruling that vehicles without defined sensor functions receive them according to the rating of the sensor array. Closes #2206
- Fixed incorrect name of the aerodynamic molotov cocktail.
- Added conditions to taking the Witness My Hate quality.
- Added metavariant stats for insect spirits.
- Added customdata rule to have shapeshifter initative bonuses apply as the default metatype initiative value instead of a bonus. 
- Added a selectskill prompt to the Enthralling Performance adept power.
- Updated shift power to the proper page reference. 

New Strings:
- Checkbox_Options_CyberlimbAttributeBonusCap
- Checkbox_Options_CustomTimeFormat
- Label_Options_DateFormat
- Label_Options_TimeFormat

Build 210
Application Fixes:
- Fixed behaviour of the Weapon Accessory mount checks to properly work with accessories that can occupy multiple slots when one of those slots is occupied.
- Fixed a regression in the behaviour of weapon accessories to ensure they properly save and load their ammoreplace property. Existing accessories that should have this property will need to be re-added.Closes #3947
- Fixed a regression in the behaviour of the GetNode method for Characters that could cause them to fetch incorrect values from XML. Closes #3948
- Purchasing cyberware in career mode with the house rule to allow customisation of essence costs now works poperly. Closes #3941
- Cyberware that has a wireless pair bonus and the replace mode will now properly remove its base improvements.