@@ -65,6 +65,8 @@
       <required>
         <oneof>
           <art>Flexible Signature</art>
+          <quality>Adept</quality>
+          <quality>Mystic Adept</quality>
         </oneof>
       </required>
       <source>SR5</source>
@@ -78,6 +80,8 @@
       <required>
         <oneof>
           <art>Masking</art>
+          <quality>Adept</quality>
+          <quality>Mystic Adept</quality>
         </oneof>
       </required>
       <source>SR5</source>
@@ -243,9 +247,13 @@
       <magician>True</magician>
       <required>
         <allof>
-          <art>Masking</art>
           <metamagic>Masking</metamagic>
         </allof>
+        <oneof>
+          <art>Masking</art>
+          <quality>Adept</quality>
+          <quality>Mystic Adept</quality>
+        </oneof>
       </required>
       <source>SG</source>
       <page>149</page>
@@ -271,6 +279,8 @@
       <required>
         <oneof>
           <art>Flexible Signature</art>
+          <quality>Adept</quality>
+          <quality>Mystic Adept</quality>
         </oneof>
       </required>
       <source>SG</source>
@@ -340,6 +350,8 @@
       <required>
         <oneof>
           <art>Advanced Ritual Casting</art>
+          <quality>Adept</quality>
+          <quality>Mystic Adept</quality>
         </oneof>
       </required>
       <source>SG</source>
@@ -403,9 +415,9 @@
       <adept>True</adept>
       <magician>False</magician>
       <required>
-        <allof>
+        <oneof>
           <metamagic>Adept Centering</metamagic>
-        </allof>
+        </oneof>
       </required>
       <source>SG</source>
       <page>156</page>
